--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "npm run clean && cross-env NODE_ENV=development node server/index.js",
+    "start": "npm run clean && cross-env NODE_ENV=development node --loader=ts-node/esm server/index.ts",
     "start:prod": "npm run clean && cross-env NODE_ENV=production node server/index.js",
     "clean": "rimraf buildClient buildServer",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "test:server": "node --experimental-vm-modules node_modules/jest/bin/jest.js --selectProjects server",
-    "test:client": "jest --selectProjects client",
+    "test:server": "node --experimental-vm-modules node_modules/jest/bin/jest.js server/*",
+    "test:client": "jest src/*",
+    "test:github.com": "node --experimental-vm-modules node_modules/jest/bin/jest.js github.com/*",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -30,6 +31,7 @@
     "mobx-react": "^7.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-blockies": "^1.4.1",
     "react-dom": "^16.8.6",
     "react-universal-component": "^4.0.0",
     "snyk": "^1.290.1",
@@ -65,7 +67,11 @@
     "@storybook/react": "^6.2.0-alpha.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/react-blockies": "^1.4.0",
     "@types/react-dom": "^17.0.0",
+    "@types/webpack-dev-middleware": "^5.0.0",
+    "@types/webpack-hot-middleware": "^2.25.4",
+    "@types/ws": "^7.4.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -92,6 +98,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "travis-github-status": "^1.6.3",
+    "ts-node": "^10.0.0",
     "typescript": "^4.0.3",
     "webpack": "4.33.0",
     "webpack-hot-middleware": "^2.25.0",
