--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "cz-conventional-changelog": "^2.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-flowtype": "^3.9.1",
